Fix (layout): prevent content jumps when opening fullscreen images

--- a/src/styles/base/_boilerplate.scss
+++ b/src/styles/base/_boilerplate.scss
@@ -18,6 +18,7 @@ body {
   margin: 0;
   position: relative;
   min-width: 360px;
+
   color: var(--color-text);
   background-color: var(--background);
 
@@ -25,6 +26,11 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body.scrollbarLock {
+  overflow: hidden;
+  padding-right: var(--scrollbar-width);
 }
 
 h1,
